Added sample files.

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Full Window Marquee</title>
+<link rel="stylesheet" href="full-window-marquee.css">
+<script src="jquery.1.10.1.js"></script>
+<script src="full-window-marquee.js"></script>
 </head>
 <body>
 	
