--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
         <title>
             Full Window Marquee
         </title>
+        <link rel="stylesheet" href="normalize.min.css">
         <link rel="stylesheet" href="full-window-marquee.css">
         <script src="jquery.1.10.1.js">
         </script>
